loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:1: error: Missing closing brace `}' assumed here
var Tour=0
^